styled links and finished layout

--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
       <!-- header content -->
       <div id="header">
         <h1 class="display-3">Project Dogma</h1>
-        <p class="lead">We must explore the essence of life before time escapes us.</p>
+        <p class="lead">If you wish to know the meaning of life, wonder of it's essence.</p>
       </div>
 
-  </div><!-- //end container -->
-</div><!-- //end jumbotron -->
-
+    </div><!-- //end container -->
+  </div><!-- //end jumbotron -->
 	
 
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
