added all the modals for current insights and about

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
           <a href="#" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">About</a>
+          <a href="#" class="nav-link" data-toggle="modal" data-target="#aboutModal">About</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Insights</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">first</a>
-            <a class="dropdown-item" href="#">second</a>
-            <a class="dropdown-item" href="#">third</a>
-            <a class="dropdown-item" href="#">fourth</a>
-            <a class="dropdown-item" href="#">fifth</a>
-            <a class="dropdown-item" href="#">sixth</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#first">first</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#second">second</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#third">third</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#fourth">fourth</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#fifth">fifth</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#sixth">sixth</a>
           </div>
         </li>
         <li class="nav-item">
@@ -49,6 +49,147 @@
 
     </div><!-- //end container -->
   </div><!-- //end jumbotron -->
+
+  <!-- about modal-->
+  <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">About Dogma</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Qui enim proident est ad ex officia fugiat officia sunt officia sunt. Consequat velit ut ipsum anim aliquip. Tempor quis tempor exercitation amet.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">O.K.</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- first insight modal-->
+  <div class="modal fade" id="first" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">First Insight || A Critical Mass
+        </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Qui enim proident est ad ex officia fugiat officia sunt officia sunt. Consequat velit ut ipsum anim aliquip. Tempor quis tempor exercitation amet.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- second insight modal-->
+  <div class="modal fade" id="second" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">The Second Insight || The Longer Now</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Qui enim proident est ad ex officia fugiat officia sunt officia sunt. Consequat velit ut ipsum anim aliquip. Tempor quis tempor exercitation amet.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- third insight modal-->
+  <div class="modal fade" id="third" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">The Third Insight || A Matter of Energy</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Qui enim proident est ad ex officia fugiat officia sunt officia sunt. Consequat velit ut ipsum anim aliquip. Tempor quis tempor exercitation amet.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- fourth insight modal-->
+  <div class="modal fade" id="fourth" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">The Fourth Insight || </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Qui enim proident est ad ex officia fugiat officia sunt officia sunt. Consequat velit ut ipsum anim aliquip. Tempor quis tempor exercitation amet.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- fifth insight modal-->
+  <div class="modal fade" id="fifth" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">The Fifth Insight || </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Qui enim proident est ad ex officia fugiat officia sunt officia sunt. Consequat velit ut ipsum anim aliquip. Tempor quis tempor exercitation amet.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- sixth insight modal-->
+  <div class="modal fade" id="sixth" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">The Sixth Insight || </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Qui enim proident est ad ex officia fugiat officia sunt officia sunt. Consequat velit ut ipsum anim aliquip. Tempor quis tempor exercitation amet.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
 	
 
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
