--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- header content -->
       <div id="header">
         <h1 class="display-3">Project Dogma</h1>
-        <p class="lead">If you wish to know the meaning of life, wonder of it's essence.</p>
+        <p class="lead">The unexamined life is not worth living.</p>
       </div>
 
     </div><!-- //end container -->
